# library-management-system

./: .env  .env-example  .gitignore  LICENSE  Makefile  README.md  books.json  docker-compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
LMS/LMS/: settings.py
_initdb.d/: 2_insert_books.sql  3_insert_categories.sql
django-app/: README.md  pytest.ini
django-app/LMS/: settings.py  urls.py
initdb.d/: 1_create_tables.sql  1_insert_books.sql
ops/: Dockerfile
src/: main.py
