[tool.poetry]
name = "library-management-system"
version = "0.1.0"
description = ""
authors = ["Pedro <pedrosantoscrlx@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
uvicorn = "^0.38.0"
django = "^5.2.8"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
